# iLocalize Open Source Development History
# ================================================================================
#
# Author       : Ulf Dunkel (fd)
# Co-Authors   : Thorsten Lemke (TL)
# --------------------------------------------------------------------------------
# Things to do : -
# --------------------------------------------------------------------------------
# History:
#
# 2014:
#   fd  Nov 13: localized NIB resources converted into XIBs, added to project
#   fd  Nov 17: all XIBs set to auto-layout, re-layouted
# 2015:
#   fd  Jan 07: - many adjustments for SDK 10.10
#               - target set to OS X 10.8 because of auto-layout
#               - started to replace deprecated functions
#   fd  Feb 04: - TableViewCustom.m: replacement for deprecated -(NSDragOperation)draggingSourceOperationMaskForLocal:(BOOL)isLocal
#               - TimerTool stuff deactivated (deprecated and unused so far)
# 2016:
#   fd  Jan:    debugging for OS X 10.11
#   TL  Jan:    debugging for OS X 10.11
#   fd  Feb 04: - using Base Internationalization (Base I18n)
#               - all localized stuff re-added
#   fd  Feb 09: - using a new versioning method for CFBundleVersion:
#                  Get the current number of GIT commits in the Console with
#                    $ git rev-list HEAD | wc -l
# 2017:
#   fd  Feb 02: - deployment target set to OS X 10.11
#               - Project now gets the current GIT commit # by Build Phase script
#               - all deprecated alert methods adjusted
#   fd  Feb 03: - all .h files reformatted - we want visually corresponding curly brackets and splendid source layouts
#               - RemoveLanguageOperation.m: As this is a destructive alert, we don't want to be the destructive button to be the default button!
#               - AboutBox: License Agreement and Acknowledgments are shown again.
#
# --------------------------------------------------------------------------------