@@ -1,2 +1,3 @@
 - "Project > Labels" doesn't seem to support ADD and REMOVE already.
 - Replace deprecated NSAccessability methods.
+- Make 'showTextZone' default.
