@@ -32,5 +32,7 @@
 #   fd  Feb 03: - all .h files reformatted - we want visually corresponding curly brackets and splendid source layouts
 #               - RemoveLanguageOperation.m: As this is a destructive alert, we don't want to be the destructive button to be the default button!
 #               - AboutBox: License Agreement and Acknowledgments are shown again.
+#   fd  Mar 21: - more debugging
+#               - Default export URL now is NSDesktopDirectory, aka ~/Desktop
 #
 # --------------------------------------------------------------------------------
